# results

./: .gitattributes  .gitignore  CONTRIBUTING  README.md  __init__.py  clean_duplicate_results.py  deleted_revisions.csv  deletion_log.txt  load_external.py  makefile  missing_implementations.csv  missing_results_2.json  missing_results_3.json  missing_results_4.json  missing_results_5.json  missing_results_7.json  mteb_clf.txt  mteb_clu.txt  mteb_en.txt  mteb_pclf.txt  mteb_rrk.txt  mteb_rtr.txt  mteb_sts.txt  paths.json  pyproject.toml  reduce_large_json_files.py  refresh.py  remove_missing_models.py  remove_model_without_implementations.py  remove_spaces_from_large_json_files.py  results.py  run_models.py
.github/: pull_request_template.md
.github/workflows/: check_file_sizes.yml  generate_cached_results.yml  main.yml  stale_pr.yml  sync_hf.yml  (+2 more)
results/: .directory  getNames.py  get_modelName.py
results.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: convert_bright.py  create_pr_results_comment.py  fetch_and_save_human_results.py  generate_cached_results.py  merge_same_model.py  normalize_results_folder.py  pr_results_comment.py  push_leaderboard_parquet.py  remove_ablations.py  remove_first_part_of_model_name.py  rename_and_move_over.py  run_model_suite.py
tests/: test_correct_folder_structure.py  test_duplicate_results.py  test_ensure_correct_metadata.py  test_load_datasets.py  test_load_results.py  test_model_implementation.py  test_no_languages_are_removed.py  test_no_splits_are_removed.py  test_results_diff.py  test_task_name_matches_filename.py
(+116209 files in other folders)
