[project]
name = "results"
version = "0.1.0"
description = "The result repository for mteb"
readme = "README.md"
requires-python = ">=3.9,<3.13"                # pytrec-eval-terrier does not compile for 3.13
dependencies = ["mteb[dev]>=1.13.0"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]
