[project]
name = "results"
version = "0.1.0"
description = "The result repository for mteb"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mteb>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.14.9",
]
pr-comment = [
    "tabulate>=0.9.0",
]

[tool.uv.sources]
mteb = { git = "https://github.com/embeddings-benchmark/mteb" }
# This repo only reads/aggregates cached JSON results; it never runs a model.
# Pin torch to the CPU-only wheel so uv doesn't pull in large GPU-specific libraries.
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
